--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve & json-server --watch mockserver/api.json --routes mockserver/routes.json",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "json-server": "^0.14.2",
     "vue": "^2.6.10",
     "vue-mc": "^0.5.0",
     "vue-router": "^3.0.3",
